@@ -43,7 +43,7 @@ apply plugin: 'ManifestClasspath'
 apply plugin: 'scalafmt'
 
 group = 'beam'
-version = '0.9.6'
+version = '0.9.6-cruise'
 
 description = """"""
 
@@ -713,6 +713,7 @@ task buildImage(type: DockerTagImage, dependsOn: buildImageWithoutTags) {
 }
 
 dockerSyncBuildContext {
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
     from('src/main/python') {
         into('src/main/python')
     }
@@ -797,33 +798,6 @@ dockerSyncBuildContext {
     from file('docker/entrypoint.sh')
 }
 
-// Some examples of manual docker file creation can be found https://github.com/bmuschko/gradle-docker-plugin/blob/3736ff644bed1cbfeed6fc7f844a5513c4208bc2/src/functTest/groovy/com/bmuschko/gradle/docker/DockerWorkflowFunctionalTest.groovy#L24
-// Also here: https://bmuschko.github.io/gradle-docker-plugin/#modifying_instructions_of_a_dockerfile_task
-tasks.register('createDockerfile', Dockerfile) {
-    dependsOn dockerSyncBuildContext
-
-    // assuming all required modules / dependencies are installed in beammodel/beam-environment
-    from 'beammodel/beam-environment'
-    label(['maintainer': 'LBNL Beam Team'])
-    environmentVariable 'JAVA_OPTS', '-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap'
-    workingDir("/app")
-    instruction 'RUN mkdir /app/output'
-    // dependencies, resources and compiled Java classes
-    copyFile("libs", "libs")
-    copyFile("resources", "resources")
-    copyFile("classes", "classes")
-    // Test scenarios
-    copyFile("test/input/common", "test/input/common")
-    copyFile("test/input/dtd", "test/input/dtd")
-    copyFile("test/input/beamville", "test/input/beamville")
-    copyFile("test/input/sf-light", "test/input/sf-light")
-    // python scripts
-    addFile 'src/main/python', 'src/main/python'
-    // entry point
-    addFile 'entrypoint.sh', 'entrypoint.sh'
-    runCommand('chmod +x /app/entrypoint.sh')
-    entryPoint('/app/entrypoint.sh')
-}
 
 ext.getDockerTag = { ->
     if (project.hasProperty("tag")) {
@@ -845,18 +819,4 @@ ext.getDockerRepository = { ->
     } else {
         return ""
     }
-}
-
-tasks.register('buildImageWithoutTags', DockerBuildImage) { dependsOn createDockerfile }
-
-tasks.register('buildImage', DockerTagImage) {
-    description 'Builds the Docker BEAM image, all code and test data are included into the image.'
-    group 'Docker'
-
-    dependsOn buildImageWithoutTags
-
-    tag = getDockerTag()
-    repository = getDockerRepository()
-    println("The new image will be tagged '$getDockerRepository:$getDockerTag'. To change use 'tag' project parameter, i.e. '-Ptag=<value>'")
-    targetImageId buildImageWithoutTags.getImageId()
 }
